force http to https redirect

--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -40,6 +40,10 @@ frontend stats
     stats auth {{ haproxy_stats_user }}:{{ haproxy_stats_password }}
 
 
+frontend http
+    bind :80
+    redirect scheme https if !{ ssl_fc }
+
 frontend https
     bind :443 ssl crt /etc/certificates/
     mode http
